--- a/HawaiiPage/assets/css/style.css
+++ b/HawaiiPage/assets/css/style.css
@@ -1,3 +1,84 @@
+/*** Navbar ***/
+.nav-box {
+  position: fixed;
+  z-index: 999999;
+  top: 0;
+  left: 50%;
+  margin-right: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  z-index: 10;
+  width: 100%;
+  height: 70px;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(50%, white), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(to bottom, white 50%, rgba(255, 255, 255, 0) 100%);
+}
+
+.nav, .navbar {
+  width: 50%;
+  margin: auto;
+  margin-top: 20px;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 2px;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.nav a, .navbar a {
+  text-decoration: none;
+}
+
+.nav .nav-item, .navbar .nav-item {
+  padding: 5px 0;
+}
+
+.nav .nav-item:after, .navbar .nav-item:after {
+  content: '\00a0';
+  display: block;
+  height: 1px;
+  width: 100%;
+  position: relative;
+  top: 3px;
+  background: transparent;
+  transition: top .3s ease-out;
+  -webkit-transition: top .3s ease-out;
+}
+
+.nav .nav-item:hover:after, .navbar .nav-item:hover:after {
+  top: 7px;
+  background: #3c3c3c;
+}
+
+@media screen and (max-width: 550px) {
+  .nav, .navbar {
+    width: 90% !important;
+  }
+  .nav .nav-item, .navbar .nav-item {
+    font-size: 10px !important;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .nav-box {
+    height: 120px !important;
+  }
+  .nav, .navbar {
+    -ms-flex-wrap: wrap !important;
+        flex-wrap: wrap !important;
+  }
+  .nav .nav-item, .navbar .nav-item {
+    margin: 5px 5px !important;
+  }
+}
+
 .header9 {
   height: 100vh;
   position: relative;
