--- a/HawaiiPage/assets/css/style.scss
+++ b/HawaiiPage/assets/css/style.scss
@@ -1,3 +1,90 @@
+
+/*** Navbar ***/
+
+.nav-box {
+    position: fixed;
+    z-index: 999999;
+	top: 0;
+	left: 50%;
+	margin-right: 50%;
+	transform: translateX(-50%);
+	z-index: 10;
+	width: 100%;
+	height: 70px;
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 50%,rgba(255,255,255,0) 100%); 
+    
+}
+
+.nav, .navbar {
+	width: 50%;
+	margin: auto;
+	margin-top: 20px;
+	font-size: 16px;
+	font-weight: 400;
+	letter-spacing: 2px;
+	list-style: none;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-justify-content: space-between;
+	justify-content: space-between;
+	flex-wrap: nowrap;
+
+	a {
+		text-decoration: none;
+	}
+	
+	.nav-item {
+		padding: 5px 0;
+		
+		&:after {
+			content: '\00a0';
+			display: block;
+			height: 1px;
+			width: 100%;
+			position: relative;
+			top: 3px;
+			background: transparent;
+			transition: top .3s ease-out;
+			-webkit-transition: top .3s ease-out;
+		}
+		
+		&:hover:after {
+			top: 7px;
+			background: #3c3c3c;
+		}
+	}
+}
+
+@media screen and (max-width: 550px) {
+	
+	.nav, .navbar {
+		width: 90% !important;
+		
+		.nav-item {
+			font-size: 10px !important;
+		}
+	}
+}
+
+@media screen and (max-width: 350px) {
+	
+	.nav-box {
+		height: 120px !important;
+
+	}
+	.nav, .navbar {
+		flex-wrap: wrap !important;
+		
+		.nav-item {
+			margin: 5px 5px !important;
+		}
+	}
+}
+
+
+
+
+
 .header9 {
     height: 100vh;
     position: relative;
