--- a/HawaiiPage/assets/css/style.css
+++ b/HawaiiPage/assets/css/style.css
@@ -57,6 +57,15 @@
   background: #3c3c3c;
 }
 
+@media screen and (max-width: 836px) {
+  .nav, .navbar {
+    width: 90% !important;
+  }
+  .nav .nav-item, .navbar .nav-item {
+    font-size: 10px !important;
+  }
+}
+
 @media screen and (max-width: 550px) {
   .nav, .navbar {
     width: 90% !important;
@@ -86,6 +95,18 @@
   background-image: url("https://magarticles.magzter.com/articles/16528/370863/5d76c18967409/Aloha-Hawaii.jpg");
 }
 
+@media screen and (max-width: 768px) {
+  .header9 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    background-size: cover;
+  }
+}
+
 .header9 .mask {
   width: 100%;
   height: 100vh;
@@ -97,14 +118,33 @@
   position: absolute;
 }
 
+@media screen and (max-width: 836px) {
+  .header9 img {
+    width: 80%;
+  }
+}
+
 .header9 h1 {
   position: absolute;
   bottom: 30%;
 }
 
+@media screen and (max-width: 550px) {
+  .header9 h1 {
+    font-size: 20px;
+  }
+}
+
 .header1 {
   background-image: url("https://thehawaiiadmirer.com/wp-content/uploads/2019/05/hawaii-travel-apps-beach.jpg");
   height: 100vh;
+  width: 100%;
+}
+
+@media screen and (max-width: 550px) {
+  .header1 {
+    background-position: center;
+  }
 }
 
 .header1 .box2 {
@@ -113,10 +153,28 @@
   padding-left: 3%;
 }
 
+@media screen and (max-width: 836px) {
+  .header1 .box2 h3 {
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .header1 .box2 h3 {
+    font-size: 20px;
+  }
+}
+
 .surfing {
   background-image: url("https://i1.wp.com/www.surfer.com/wp-content/uploads/2018/07/jackson_wau_nias_local-2742-180719-Ryan_Chachi_Craig.jpg?resize=1200%2C600&ssl=1");
   background-size: cover;
   background-position: left;
   background-attachment: fixed;
+}
+
+@media screen and (max-width: 768px) {
+  .surfing {
+    background-image: url("/assets/images/surfing_s.jpg");
+  }
 }
 /*# sourceMappingURL=style.css.map */
