--- a/HawaiiPage/assets/css/style.scss
+++ b/HawaiiPage/assets/css/style.scss
@@ -55,6 +55,16 @@
 	}
 }
 
+@media screen and (max-width: 836px) {
+	
+	.nav, .navbar {
+		width: 90% !important;
+		
+		.nav-item {
+			font-size: 10px !important;
+		}
+	}
+}
 @media screen and (max-width: 550px) {
 	
 	.nav, .navbar {
@@ -90,6 +100,14 @@
     position: relative;
     background-attachment: fixed;
     background-image: url("https://magarticles.magzter.com/articles/16528/370863/5d76c18967409/Aloha-Hawaii.jpg");
+	
+
+	@media screen and (max-width: 768px) {
+		display: flex;
+		justify-content: center;
+
+		background-size: cover;
+	}
 
     .mask {
         width: 100%;
@@ -99,13 +117,22 @@
     }
 
     img {
-        position: absolute;
+		position: absolute;
+		
+		@media screen and (max-width: 836px) {
+	
+			width: 80%;
+		}
     }
 
     h1 {
 
         position: absolute;
-        bottom: 30%;
+		bottom: 30%;
+		
+		@media screen and (max-width: 550px) {
+			font-size: 20px;
+		}
     }
 
 
@@ -113,12 +140,28 @@
 
 .header1 {
     background-image: url("https://thehawaiiadmirer.com/wp-content/uploads/2019/05/hawaii-travel-apps-beach.jpg");
-    height: 100vh;
+	height: 100vh;
+	width: 100%;
 
+	@media screen and (max-width: 550px) {
+		background-position: center;
+	}
+
+	
     .box2 {
         padding-top: 10%;
         width: 60%;
-        padding-left: 3%;
+		padding-left: 3%;
+		
+		h3{
+			@media screen and (max-width: 836px) {
+				font-size: 30px;	
+			}
+
+			@media screen and (max-width: 550px) {
+				font-size: 20px;
+			}
+		}
     }
 }
 
@@ -126,7 +169,12 @@
     background-image: url("https://i1.wp.com/www.surfer.com/wp-content/uploads/2018/07/jackson_wau_nias_local-2742-180719-Ryan_Chachi_Craig.jpg?resize=1200%2C600&ssl=1");
     background-size: cover;
     background-position: left;
-    background-attachment: fixed;
+	background-attachment: fixed;
+	
+	@media screen and (max-width: 768px) {
+		background-image: url("/assets/images/surfing_s.jpg");
+    
+	}
  
 }
 
