--- a/HawaiiPage/assets/css/style.css
+++ b/HawaiiPage/assets/css/style.css
@@ -174,7 +174,7 @@
 
 @media screen and (max-width: 768px) {
   .surfing {
-    background-image: url("/assets/images/surfing_s.jpg");
+    background-image: url("https://raw.githubusercontent.com/nininiyou/projects/master/HawaiiPage/assets/images/surfing_s.jpg");
   }
 }
 /*# sourceMappingURL=style.css.map */
