--- a/HawaiiPage/assets/css/style.scss
+++ b/HawaiiPage/assets/css/style.scss
@@ -172,7 +172,7 @@
 	background-attachment: fixed;
 	
 	@media screen and (max-width: 768px) {
-		background-image: url("/assets/images/surfing_s.jpg");
+		background-image: url("https://raw.githubusercontent.com/nininiyou/projects/master/HawaiiPage/assets/images/surfing_s.jpg");
     
 	}
  
