--- a/DataGoRun/css/style.css
+++ b/DataGoRun/css/style.css
@@ -243,7 +243,7 @@ text-decoration:none;
 text-shadow: 3px 3px 3px #ccc; 
 display: block; 
 }
-li.layer:nth-child(1) {} /*1 item*/
+/* li.layer:nth-child(1) {} 1 item */
 
 /*-----Logotype----------------*/
 li.layer:nth-child(2) a{
