--- a/jedy-2/assets/css/style_2.css
+++ b/jedy-2/assets/css/style_2.css
@@ -3,8 +3,7 @@ body {
   font-size: 16px;
   font-weight: 300;
   color: #888;
-  line-height: 30px;
-  text-align: center;
+  /* text-align: center; */
 }
 
 strong {
@@ -188,7 +187,7 @@ img {
 
 /***** Top menu *****/
 
-.navbar {
+/* .navbar {
   margin-bottom: 0;
   background: #444;
   border: 0;
@@ -224,16 +223,16 @@ ul.navbar-nav {
 }
 
 .navbar-brand {
-  width: 72px;
-  height: 60px;
-  background: url(../img/logo.png) left center no-repeat;
+  width: 30px;
+  height: 30px;
+  background: url(/img/logo5.png) left center no-repeat;
   text-indent: -99999px;
 }
 
 .navbar-toggle {
   margin-top: 13px;
   margin-bottom: 13px;
-}
+} */
 
 
 /***** Features *****/
