--- a/jedy-2/css/style.scss
+++ b/jedy-2/css/style.scss
@@ -1,3 +1,8 @@
+$gray: #eee;
+$white: #fff;
+$black: #333;
+$active: #e74c3c;
+
 /*================================================================
 Default Styles
 ================================================================*/
@@ -16,28 +21,174 @@ body {
   li {
     list-style: none;
   }
+
+  strong {
+    font-weight: 1000;
+  }
 }
 
-/*** Navbar ***/
-.nav {
-  .scroll-link {
-    &:after {
-      content: "\00a0";
-      display: block;
-      height: 1px;
-      width: 100%;
-      position: relative;
-      top: 3px;
-      background: transparent;
-      transition: top 0.3s ease-out;
-      -webkit-transition: top 0.3s ease-out;
-    }
+/*================================================================
+Navbar
+================================================================*/
 
-    &:hover:after {
-      top: 7px;
-      background: #3c3c3c;
-      text-decoration: none;
-    }
+.navbar {
+  // opacity: 0.8;
+  margin-bottom: 0;
+  background: none;
+  transition: all 0.2s ease-out;
+}
+
+.navbar-container {
+  position: relative;
+}
+
+.nav {
+  margin: 0 auto;
+}
+
+.navbar .navbar-nav li a {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #2e1c05;
+  transition: all 0.2s ease-out;
+}
+.navbar-default {
+  border-color: none;
+}
+
+.navbar-scroll {
+  // opacity: 1;
+  background-color: #f4de7f;
+
+  .navbar .navbar-nav li a {
+    color: white;
+  }
+}
+
+#top-social-menu {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .navbar {
+    height: 50px;
+  }
+
+  .navbar-nav > li > a {
+    padding: 0;
+    // margin-top: 35px;
+    margin-left: 50px;
+    line-height: 50px;
+  }
+
+  #top-social-menu {
+    display: initial;
+  }
+
+  /* Navbar when scrolled */
+
+  .navbar-scroll {
+    height: 50px;
+    line-height: 50px;
+  }
+
+  .navbar-scroll #top-social-menu {
+    display: none;
+    transition: all 0.2s ease-out;
+  }
+
+  .navbar-scroll .navbar-brand {
+    height: 50px;
+    line-height: 50px;
+  }
+
+  .navbar-scroll .navbar-nav > li > a {
+    opacity: 1;
+    padding: 0;
+    margin-top: 0;
+  }
+}
+
+/* # Hover Link Effect
+================================ */
+@media (min-width: 768px) {
+  .navbar-nav > li > a::after {
+    position: absolute;
+    top: 80%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: #3c3c3c;
+    content: "";
+    opacity: 0;
+    transition: height 0.3s, opacity 0.3s, transform 0.3s;
+    transform: translateY(-10px);
+  }
+
+  .navbar-nav > li > a:hover::after,
+  .navbar-nav > li > a:focus::after {
+    height: 2px;
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+/* # Social menu
+================================ */
+
+#top-social-menu {
+  position: absolute;
+  top: 7px;
+  right: 0;
+  font-size: 12px;
+  z-index: 101;
+  padding-right: 0px;
+  list-style: none;
+  color: #2e1c05;
+  transition: all 0.2s ease-out;
+}
+
+#top-social-menu li {
+  float: left;
+  padding: 10px 15px;
+}
+
+#top-social-menu li:last-child {
+  padding-right: 0;
+}
+
+#top-social-menu li a {
+  text-decoration: none;
+  color: #3c3c3c;
+}
+
+#top-social-menu li a:hover {
+  text-decoration: none;
+  color: #543a1a;
+}
+
+#top-social-menu i {
+  font-size: 16px;
+
+  transition: all 0.2s ease-in;
+}
+
+#top-social-menu i:hover {
+  text-decoration: none;
+  color: #543a1a;
+}
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+  only screen and (min--moz-device-pixel-ratio: 2),
+  only screen and (-o-min-device-pixel-ratio: 2/1),
+  only screen and (min-device-pixel-ratio: 2),
+  only screen and (min-resolution: 192dpi),
+  only screen and (min-resolution: 2dppx) {
+  /* logo */
+  .navbar-brand {
+    background-image: url(/img/logo5.png) !important;
+    background-repeat: no-repeat !important;
+    background-size: 72px 43px !important;
   }
 }
 
@@ -551,8 +702,13 @@ li.layer:nth-child(12) a {
       }
     }
 
+    .features-box {
+      text-align: center;
+    }
+
     .row-btn {
       margin-top: 60px;
+      text-align: center;
     }
   }
 }
@@ -560,6 +716,7 @@ li.layer:nth-child(12) a {
 //========================================
 // section 關於跑跑
 //========================================
+
 .img-box {
   .parallax {
     background-image: url("../img/img-about.jpg");
@@ -608,11 +765,12 @@ li.layer:nth-child(12) a {
 .run-items {
   background: #f8f8f8;
   width: 100%;
-  
+  height: 100vh;
 
   .run-items-box {
-    width: 100%;  
- 
+    width: 100%;
+    text-align: center;
+
     padding-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
@@ -623,68 +781,232 @@ li.layer:nth-child(12) a {
     // 由左上往右下斜
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 3vw));
 
-    .item-box {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      min-height: 58px;
+    .row {
+      margin-bottom: 30px;
 
-      .item-context {
-        // margin: 10px auto 0;
-        display: flex;
-        flex-flow: column nowrap;
-        align-items: center;
-        overflow: hidden;
-        margin-right: 10px;
+      .item-box {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        min-height: 58px;
 
-        background-color: #f8f8f8;
-        border: 1px solid #eee;
-        border-radius: 5%;
-        transition: opacity, border 0.2s linear;
+        .item-context {
+          // margin: 10px auto 0;
+          display: flex;
+          flex-flow: column nowrap;
+          align-items: center;
+          overflow: hidden;
+          margin-right: 10px;
 
-        box-shadow: grey;
-
-        padding: 20px;
-
-        &:hover {
-          background: #66d6c5;
-        }
-
-        h3 {
-          font-weight: 1000;
-          color: black;
-        }
-
-        
-
-        .item-cell {
-          width: 80%;
-          font-size: 16px;
-          line-height: 20px;
-          text-align: center;
           background-color: #f8f8f8;
-          -webkit-user-select: none;
-          -ms-user-select: none;
-          user-select: none;
+          border: 1px solid #eee;
+          border-radius: 5%;
+          transition: opacity, border 0.2s linear;
+
+          box-shadow: grey;
+
+          padding: 20px;
+
+          &:hover {
+            background: rgb(169, 162, 212);
+
+            border-top: 8px solid black;
+            border-radius: 8px/2;
+            transform: translateY(-1em);
+            transition: all 0.2s ease-out;
+          }
+          &:hover .item-cell {
+            background: rgb(169, 162, 212);
+          }
+
+          h3 {
+            font-weight: 1000;
+            color: black;
+          }
+
+          .item-cell {
+            width: 80%;
+            font-size: 16px;
+            line-height: 20px;
+            text-align: center;
+            // background-color: #f8f8f8;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+          }
         }
-      }
 
-      .cell-1 {
-        height: 80%;
-      }
-      .cell-2 {
-        height: 90%;
-      }
-      .cell-3 {
-        height: 95%;
-      }
+        .cell-1 {
+          height: 80%;
+        }
+        .cell-2 {
+          height: 90%;
+        }
+        .cell-3 {
+          height: 95%;
+        }
 
-      .item-text{
-
-        ul {
-          display: inline-block;
-          padding: 0;
+        .item-text {
+          ul {
+            display: inline-block;
+            padding: 0;
+          }
         }
       }
     }
+  }
+}
+
+// 跑跑內容
+
+.run-content {
+  height: 100vh;
+  width: 100%;
+  background-color: #f8f8f8;
+  color: black;
+
+  text-align: center;
+
+  .tab-box {
+    margin: 0 auto;
+    width: 900px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+    #left-side {
+      height: 70%;
+      width: 25%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      ul {
+        padding: 0;
+
+        li {
+          padding-top: 10px;
+          padding-bottom: 10px;
+          display: flex;
+          line-height: 34px;
+          color: rgba($black, 0.5);
+          font-weight: 500;
+          cursor: pointer;
+          transition: all 0.2s ease-out;
+
+          &:hover {
+            color: rgba($black, 1);
+            transition: all 0.2s ease-out;
+          }
+
+          &:hover > .icon {
+            fill: $black;
+          }
+        }
+
+        li.active {
+          color: rgba($black, 1);
+
+          &:hover > .icon {
+            fill: $active;
+          }
+        }
+      }
+    }
+  }
+}
+
+#border {
+  height: 288px;
+  width: 1px;
+  background-color: rgba($black, 0.2);
+
+  #line.one {
+    width: 5px;
+    height: 54px;
+    background-color: $active;
+    margin-left: -2px;
+    margin-top: 35px;
+    transition: all 0.4s ease-in-out;
+  }
+
+  #line.two {
+    width: 5px;
+    height: 54px;
+    background-color: $active;
+    margin-left: -2px;
+    margin-top: 89px;
+    transition: all 0.4s ease-in-out;
+  }
+
+  #line.three {
+    width: 5px;
+    height: 54px;
+    background-color: $active;
+    margin-left: -2px;
+    margin-top: 143px;
+    transition: all 0.4s ease-in-out;
+  }
+
+  #line.four {
+    width: 5px;
+    height: 54px;
+    background-color: $active;
+    margin-left: -2px;
+    margin-top: 197px;
+    transition: all 0.4s ease-in-out;
+  }
+
+  #line.five {
+    width: 5px;
+    height: 54px;
+    background-color: $active;
+    margin-left: -2px;
+    margin-top: 197px;
+    transition: all 0.4s ease-in-out;
+  }
+}
+
+#right-side {
+  height: 300px;
+  width: 75%;
+  overflow: hidden;
+
+  #first,
+  #second,
+  #third,
+  #fourth {
+    position: absolute;
+    height: 300px;
+    width: 50%;
+    transition: all 0.6s ease-in-out;
+    margin-top: -350px;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    h1 {
+      font-weight: 800;
+      color: $black;
+    }
+
+    p {
+      color: $black;
+      font-weight: 500;
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+  }
+
+  #first.active,
+  #second.active,
+  #third.active,
+  #fourth.active {
+    margin-top: 0px;
+    opacity: 1;
+    transition: all 0.6s ease-in-out;
   }
 }
