--- a/jedy-2/css/style.css
+++ b/jedy-2/css/style.css
@@ -717,7 +717,7 @@ li.layer:nth-child(12) a {
 跑跑項目
 ================================================================*/
 .run-items {
-  background: #f8f8f8;
+  background: #66d6c5;
   width: 100%;
   height: 100vh;
 }
@@ -821,14 +821,14 @@ li.layer:nth-child(12) a {
 .run-content {
   height: 100vh;
   width: 100%;
-  background-color: #f8f8f8;
-  color: black;
+  background-color: #66d6c5;
+  color: white;
   text-align: center;
 }
 
 .run-content .tab-box {
   margin: 0 auto;
-  width: 900px;
+  width: 80%;
   height: 400px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -839,6 +839,7 @@ li.layer:nth-child(12) a {
   -webkit-box-pack: left;
       -ms-flex-pack: left;
           justify-content: left;
+  background-color: white;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
