--- a/jedy-2/css/tab_card.css
+++ b/jedy-2/css/tab_card.css
@@ -49,6 +49,18 @@ ul, li {
   overflow: hidden;
 }
 
+@media (max-width: 960px) {
+  #tab-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 #left-side {
   height: 70%;
   width: 25%;
