--- a/jedy-2/css/tab_card.scss
+++ b/jedy-2/css/tab_card.scss
@@ -45,7 +45,12 @@ ul, li {
 	display: flex;
   	align-items: center;
   	justify-content: left;
-	overflow: hidden
+	overflow: hidden;
+
+	@media (max-width:960px) {
+		display: flex;
+		flex-direction: column;
+	}
 
 }
 
